# deep-learning-with-domain-randomization

./: README.md
my_dcnn_training_pkg/launch/: generate_dataset_96.launch  generate_dataset_96_ex1-2.launch  generate_dataset_96_ex1-3.launch  generate_dataset_96_ex4-1.launch  rviz_fetch_model_evaluation.launch  start_fetch_randomenv.launch  start_fetch_randomenv_ex4-3.launch  train_model_96_retrain.launch
my_dcnn_training_pkg/rviz/: model_evaluation.rviz
my_dcnn_training_pkg/scripts/: rgb_camera_python3.py
my_randomgazebomanager_pkg/: CMakeLists.txt  package.xml  setup.py
my_randomgazebomanager_pkg/dataset_gen_annotations/: 2019_11_28_21_39_0.xml  2019_11_28_21_39_1.xml  2019_11_28_21_39_2.xml  2019_11_28_21_39_3.xml  2019_11_28_21_39_4.xml  2019_11_28_21_39_5.xml  2019_11_28_21_39_6.xml  2019_11_28_21_39_7.xml  2019_11_28_21_39_8.xml  2019_11_28_21_39_9.xml
my_randomgazebomanager_pkg/launch/: create_training_material_1object.launch
my_randomgazebomanager_pkg/scripts/: create_training_material.py  rgb_camera_python3_v2.py
src/my_dcnn_training_pkg/: CMakeLists.txt  package.xml
src/my_dcnn_training_pkg/dataset_gen_csv/: train.csv  validation.csv
src/my_dcnn_training_pkg/launch/: generate_dataset_96_ex1-2.launch  train_model_96.launch
src/my_dcnn_training_pkg/scripts/: fetch_randomenv.py  generate_dataset.py  train_model.py
src/my_randomgazebomanager_pkg/dataset_gen_annotations/: 2019_11_28_18_58_0.xml  2019_11_28_18_58_1.xml  2019_11_28_18_58_2.xml  2019_11_28_18_58_3.xml  2019_11_28_18_58_4.xml  2019_11_28_18_58_5.xml  2019_11_28_18_58_6.xml  2019_11_28_18_58_7.xml  2019_11_28_18_58_8.xml  (+1 more)
(+5 files in other folders)
